added function to calculate results from dict input, and debugged ecoinvent import without using Activity-browser

--- a/bwLCA/Ecoinvent_bwLCA.ipynb
+++ b/bwLCA/Ecoinvent_bwLCA.ipynb
@@ -72,18 +72,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "db = Database(Database_name)\n",
-    "Process_list = db.search(\"*\", limit=10000000) # read all processes in the database\n",
+    "Process_list_all = db.search(\"*\", limit=10000000) # read all processes in the database\n",
     "# TODO: this process is time consuming, run once is enough!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,9 +145,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_concrete block production.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_clay brick production.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_unfired clay brick production.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_natural stone plate production, cut.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_flat glass production, coated.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_cement production, Portland.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_sand quarry operation, open pit mine.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_gravel production, crushed.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_reinforcing steel production.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_glued laminated timber production, MUF-glue.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_planing, board, hardwood, u=10%.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_planing, board, softwood, u=10%.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_plywood production.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_glass wool mat production.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_polystyrene foam slab for perimeter insulation.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_polystyrene production, extruded, CO2 blown.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_polyurethane production, rigid foam.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_stone wool production.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_roof tile production.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_gypsum plasterboard production.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_natural stone plate production, cut.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_ceramic tile production.csv\n",
+      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_market for electricity, medium voltage.csv\n"
+     ]
+    }
+   ],
    "source": [
     "Impact_method = [m for m in methods if 'IPCC 2013' in str(m) and 'climate change' in str(m) and 'GWP 100a' in str(m) and not 'no LT' in str(m)][0]\n",
     "Today = date.today().strftime(\"%b_%m_%Y\")\n",
@@ -165,6 +195,13 @@
     "\n",
     "# TODO: change names above as you need"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
