Refresh the git by pulling the current repo and replacing the files with backup files

--- a/bwLCA/Ecoinvent_bwLCA.ipynb
+++ b/bwLCA/Ecoinvent_bwLCA.ipynb
@@ -2,34 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nThis script is designed to prevent the usage of Activity-Browser.\\n\\nAuthor: Ao Chen. Place: UZH Zentrum. \\n'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "This script is designed to prevent the usage of Activity-Browser.\n",
-    "\n",
-    "Author: Ao Chen. Place: UZH Zentrum. \n",
-    "\"\"\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\"\"\"\n",
+    "This script is designed to prevent the usage of Activity-Browser while realize the same function as Test_bwLCA.ipynb.\n",
+    "Author: Ao Chen. Place: UZH Zentrum. \n",
+    "\"\"\"\n",
     "import os\n",
     "import pandas as pd\n",
     "from brightway2 import *\n",
@@ -59,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,8 +85,8 @@
     "\n",
     "        results = {}\n",
     "        activities = {}\n",
-    "        for i in range(len(material_df)):\n",
-    "        # for i in range(1): # for test\n",
+    "        # for i in range(len(material_df)):\n",
+    "        for i in range(1): # for test\n",
     "            search_process_list = [p for p in self.Process_list_all if material_df['Activity'][i] in str(p)] # search for processes with specific name\n",
     "            for j in range(len(search_process_list)):\n",
     "                functional_unit = {search_process_list[j]: 1}\n",
@@ -115,7 +95,7 @@
     "                lca.lcia()\n",
     "                results[dict(search_process_list[j])['location']] = lca.score\n",
     "                activities[dict(search_process_list[j])['location']] = dict(search_process_list[j])['name']\n",
-    "                \n",
+    "            \n",
     "            results_Series = pd.Series(results, name='kg CO2-Eq')\n",
     "            activities_Series = pd.Series(activities, name='activity')\n",
     "            output_df = pd.concat([results_Series, activities_Series], axis=1)\n",
@@ -145,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -153,27 +133,6 @@
      "output_type": "stream",
      "text": [
       "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_concrete block production.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_clay brick production.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_unfired clay brick production.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_natural stone plate production, cut.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_flat glass production, coated.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_cement production, Portland.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_sand quarry operation, open pit mine.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_gravel production, crushed.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_reinforcing steel production.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_glued laminated timber production, MUF-glue.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_planing, board, hardwood, u=10%.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_planing, board, softwood, u=10%.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_plywood production.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_glass wool mat production.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_polystyrene foam slab for perimeter insulation.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_polystyrene production, extruded, CO2 blown.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_polyurethane production, rigid foam.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_stone wool production.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_roof tile production.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_gypsum plasterboard production.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_natural stone plate production, cut.csv\n",
-      "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_ceramic tile production.csv\n",
       "Results stored in/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/Feb_02_2022_calc_results_GWP100a_test/Summary_market for electricity, medium voltage.csv\n"
      ]
     }
@@ -198,10 +157,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Ecoinvent'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# projects.delete_project(name='Test_Ecoinvent', delete_dir=True) # Delete everything in the project. TODO: only uncomment this line when necessary!!!"
+   ]
   }
  ],
  "metadata": {
