Reconstructed OpenLCA codes for creating product systems while prevent its repeating creation, and for calculation from Excel and dict input.

--- a/OptBat/optbat.ipynb
+++ b/OptBat/optbat.ipynb
@@ -36,10 +36,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "excel_name = '/Users/ocean/Desktop/OptBat/26012022 OptiBat_v2.xlsx' # TODO: change excel name\n",
+    "excel_name = '26012022 OptiBat_v2.xlsx' # TODO: change excel name\n",
     "optbat_db = pd.ExcelFile(excel_name)\n",
     "\n",
-    "Today = date.today().strftime(\"%b_%m_%Y\")\n",
+    "Today = date.today().strftime(\"%d_%b_%Y\")\n",
     "results_path = Today+'_results.xlsx' # TODO: change results name as needed"
    ]
   },
