--- a/bwLCA/Ecoinvent_bwLCA.ipynb
+++ b/bwLCA/Ecoinvent_bwLCA.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "Project_name = \"Ecoinvent\" # if not exist, automatically create one\n",
-    "Dataset_path = \"/Users/ocean/Library/CloudStorage/OneDrive-forpersonal/RA-SustainableConstruction/bwLCA/ecoinvent 3.8_cutoff_ecoSpold02/datasets\"\n",
+    "Dataset_path = \"bwLCA/ecoinvent 3.8_cutoff_ecoSpold02/datasets\"\n",
     "# TODO: substitute this with your ecoinvent datasets path (absolute path is more reliable)\n",
     "Database_name = \"cutoff38\"\n",
     "project_setup(Project_name, Dataset_path, Database_name)"
