Created json file storing created product system info more practically

--- a/OpenLCA/Ecoinvent_OpenLCA.ipynb
+++ b/OpenLCA/Ecoinvent_OpenLCA.ipynb
@@ -2,25 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<olca.ipc.Client at 0x7fb544285e50>"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "'''\n",
     "This script is used for interacting with OpenLCA.\n",
     "Codes are developed by Ao Chen @ETH-ML.\n",
     "Connect to IPC server in OpenLCA software before running. (Port: 8080)\n",
+    "TODO: if you're running this script in your machine for the first time, run `product_system_reader.ipynb` first!\n",
     "'''\n",
     "\n",
     "from notebook.services.config import ConfigManager\n",
@@ -53,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +75,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Processes_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,11 +149,14 @@
     "        for j in range(len(calc_result)):\n",
     "            key = keys[j]\n",
     "            result = calc_result[key]\n",
-    "            for k in range(len(result.impact_results)):\n",
-    "                GWP_result = result.impact_results[k]\n",
-    "                if 'GWP 100a' in GWP_result.impact_category.name:\n",
-    "                    GWP100a_value = GWP_result.value\n",
-    "            result_list.append([GWP100a_value, key])\n",
+    "            if result.impact_results is not None:\n",
+    "                for k in range(len(result.impact_results)):\n",
+    "                    GWP_result = result.impact_results[k]\n",
+    "                    if 'GWP 100a' in GWP_result.impact_category.name:\n",
+    "                        GWP100a_value = GWP_result.value\n",
+    "                result_list.append([GWP100a_value, key])\n",
+    "            else:\n",
+    "                print(key)\n",
     "        result_df = pd.DataFrame(result_list, columns=['GWP100a', 'key'])\n",
     "        result_df[['Activity', 'Product', 'Cutoff', 'Location', 'id']] = result_df.key.str.split('|', expand=True)\n",
     "        result_df = result_df.drop(columns='key')\n",
@@ -185,57 +187,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Product system of \"autoclaved aerated concrete block production | autoclaved aerated concrete block | Cutoff, U\" has been created before.\n",
-      "ID: 91c851b2-b506-4e2e-8b01-e9584a1cde88\n",
-      "Product system of \"lightweight concrete block production, pumice | lightweight concrete block, pumice | Cutoff, U\" has been created before.\n",
-      "ID: 440761a3-d7d2-4490-94c9-ec7053043e33\n",
-      "Calculating autoclaved aerated concrete block production | autoclaved aerated concrete block | Cutoff, U | CH | 91c851b2-b506-4e2e-8b01-e9584a1cde88\n",
-      "Remaining number of processes to be calculated: 1\n",
-      "Calculating lightweight concrete block production, pumice | lightweight concrete block, pumice | Cutoff, U | DE | 440761a3-d7d2-4490-94c9-ec7053043e33\n",
-      "Remaining number of processes to be calculated: 0\n",
-      "Product system of \"light clay brick production | light clay brick | Cutoff, U\" has been created before.\n",
-      "ID: c1c234be-8c65-4260-a7f4-767c54ca0852\n",
-      "Product system of \"clay brick production | clay brick | Cutoff, U\" has been created before.\n",
-      "ID: 4d4edfbd-a9fc-4008-9157-7a886badb2f0\n",
-      "Calculating light clay brick production | light clay brick | Cutoff, U | RoW | c1c234be-8c65-4260-a7f4-767c54ca0852\n",
-      "Remaining number of processes to be calculated: 1\n",
-      "Calculating clay brick production | clay brick | Cutoff, U | RoW | 4d4edfbd-a9fc-4008-9157-7a886badb2f0\n",
-      "Remaining number of processes to be calculated: 0\n",
-      "Product system of \"market for electricity, medium voltage | electricity, medium voltage | Cutoff, U\" has been created before.\n",
-      "ID: 2357bd7c-a40e-4840-a4fc-2d23bac9ff8c\n",
-      "Product system of \"market for electricity, medium voltage | electricity, medium voltage | Cutoff, U\" has been created before.\n",
-      "ID: ee12b195-3ba3-4dc2-94cd-98ea6905bf0d\n",
-      "Calculating market for electricity, medium voltage | electricity, medium voltage | Cutoff, U | OM | 2357bd7c-a40e-4840-a4fc-2d23bac9ff8c\n",
-      "Remaining number of processes to be calculated: 1\n",
-      "Calculating market for electricity, medium voltage | electricity, medium voltage | Cutoff, U | BW | ee12b195-3ba3-4dc2-94cd-98ea6905bf0d\n",
-      "Remaining number of processes to be calculated: 0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "Impact_method = 'IPCC 2013 no LT' # TODO: change impact method as you need\n",
     "Today = date.today().strftime(\"%d_%b_%Y\") # day, month, year\n",
     "Result_path = Today+'_calc_results_GWP100a_test' # TODO: change result path as you need\n",
     "\n",
-    "Excel_path = 'List_of_Materials_ecoinvent.xlsx' # optional, TODO: change Excel name (relative path, put the excel file under the same directory as this notebook)\n",
-    "Process_list_target = {\n",
-    "    'include': ['market for electricity, medium voltage'], # key words you want to include\n",
-    "    'not_include': ['municipal waste'] # key words you do not want to include\n",
-    "} # optional, TODO: change keywords as you need\n",
-    "  # if you want to search different activities, put your keywords accordingly in the second, third, ... position \n",
-    "  # in the list and remember to include an empty element '' when there's no 'not_include' keyword.\n",
+    "Excel_path = 'List_of_Materials_ecoinvent.xlsx' # optional, TODO: comment, uncomment and change Excel name (relative path, put the excel file under the same directory as this notebook)\n",
     "\n",
-    "Created_PS_refProcess = json.load(open(\"Created_PS_refProcess.json\", \"r\"))\n",
+    "# Process_list_target = {\n",
+    "#     'include': ['market for electricity, medium voltage'], # key words you want to include\n",
+    "#     'not_include': ['municipal waste'] # key words you do not want to include\n",
+    "# } # optional, TODO: comment, uncomment and change keywords as you need\n",
+    "# if you want to search different activities, put your keywords accordingly in the second, third, ... position \n",
+    "# in the list and remember to include an empty element '' when there's no 'not_include' keyword.\n",
+    "\n",
+    "Created_PS_refProcess = json.load(open(\"Created_PS_refProcess.json\", \"r\")) \n",
+    "# The read json file stores the processes that are calculated and their attached product system.\n",
+    "# So this file should be varied from machine to machine. If there're no product systems created before in \n",
+    "# your OpenLCA database, the json file should contain an empty dictionary.\n",
+    "\n",
     "instance1 = LCA_Calculation(Processes_df, Impact_method, Result_path, Excel_path=Excel_path, Process_list_target=Process_list_target)\n",
-    "Created_PS_refProcess = instance1.cal_from_excel(Created_PS_refProcess=Created_PS_refProcess) # input Excel\n",
-    "Created_PS_refProcess = instance1.cal_from_list(Created_PS_refProcess=Created_PS_refProcess) # input list (in fact a dict)\n",
+    "Created_PS_refProcess = instance1.cal_from_excel(Created_PS_refProcess=Created_PS_refProcess) # TODO: input Excel\n",
+    "# Created_PS_refProcess = instance1.cal_from_list(Created_PS_refProcess=Created_PS_refProcess) # TODO: uncomment if you want to pass a list input list (in fact a dict)\n",
     "Created_PS_refProcess_file = open(\"Created_PS_refProcess.json\", \"w\")\n",
     "Created_PS_refProcess_file = json.dump(Created_PS_refProcess, Created_PS_refProcess_file)\n",
     "\n",
@@ -248,7 +224,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "result.impact_results"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---------------------------------------------------------------------------\n",
+    "TypeError                                 Traceback (most recent call last)\n",
+    "/var/folders/pk/3tmwrq6541738k97y1cxd07w0000gn/T/ipykernel_31799/1692746221.py in <module>\n",
+    "     17 \n",
+    "     18 instance1 = LCA_Calculation(Processes_df, Impact_method, Result_path, Excel_path=Excel_path, Process_list_target=Process_list_target)\n",
+    "---> 19 Created_PS_refProcess = instance1.cal_from_excel(Created_PS_refProcess=Created_PS_refProcess) # TODO: input Excel\n",
+    "     20 # Created_PS_refProcess = instance1.cal_from_list(Created_PS_refProcess=Created_PS_refProcess) # TODO: uncomment if you want to pass a list input list (in fact a dict)\n",
+    "     21 Created_PS_refProcess_file = open(\"Created_PS_refProcess.json\", \"w\")\n",
+    "\n",
+    "/var/folders/pk/3tmwrq6541738k97y1cxd07w0000gn/T/ipykernel_31799/1079511498.py in cal_from_excel(self, Created_PS_refProcess)\n",
+    "     79         # for i in range(2): # for test\n",
+    "     80             search_process_list = [Processes_df.iloc[p] for p in range(len(self.Processes_df)) if material_df['Activity'][i] in self.Processes_df.iloc[p]['name']] # search for processes with specific name\n",
+    "---> 81             result_df = self.create_calc_product_system(search_process_list, Created_PS_refProcess)\n",
+    "     82             result_df.to_csv(self.Result_path+'/Summary_'+material_df['Activity'][i]+'.csv', index=None)\n",
+    "     83 \n",
+    "\n",
+    "/var/folders/pk/3tmwrq6541738k97y1cxd07w0000gn/T/ipykernel_31799/1079511498.py in create_calc_product_system(self, search_process_list, Created_PS_refProcess)\n",
+    "     60             key = keys[j]\n",
+    "     61             result = calc_result[key]\n",
+    "---> 62             for k in range(len(result.impact_results)):\n",
+    "     63                 GWP_result = result.impact_results[k]\n",
+    "     64                 if 'GWP 100a' in GWP_result.impact_category.name:\n",
+    "\n",
+    "TypeError: object of type 'NoneType' has no len()"
+   ]
   }
  ],
  "metadata": {
