saved and cleaned repo

--- a/OpenLCA/Ecoinvent_OpenLCA.ipynb
+++ b/OpenLCA/Ecoinvent_OpenLCA.ipynb
@@ -215,47 +215,8 @@
     "Created_PS_refProcess_file = open(\"Created_PS_refProcess.json\", \"w\")\n",
     "Created_PS_refProcess_file = json.dump(Created_PS_refProcess, Created_PS_refProcess_file)\n",
     "\n",
-    "# if you see `ERROR 500`, Failed to call method public org.openlca.ipc.RpcResponse org.openlca.ipc.handlers.Calculator.calculate(org.openlca.ipc.RpcRequest)`,\n",
+    "# TODO: if you see `ERROR 500`, Failed to call method public org.openlca.ipc.RpcResponse org.openlca.ipc.handlers.Calculator.calculate(org.openlca.ipc.RpcRequest)`,\n",
     "# try to increase max. memory usage in OpenLCA then restart OpenLCA and Jupyter kernel."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "result.impact_results"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---------------------------------------------------------------------------\n",
-    "TypeError                                 Traceback (most recent call last)\n",
-    "/var/folders/pk/3tmwrq6541738k97y1cxd07w0000gn/T/ipykernel_31799/1692746221.py in <module>\n",
-    "     17 \n",
-    "     18 instance1 = LCA_Calculation(Processes_df, Impact_method, Result_path, Excel_path=Excel_path, Process_list_target=Process_list_target)\n",
-    "---> 19 Created_PS_refProcess = instance1.cal_from_excel(Created_PS_refProcess=Created_PS_refProcess) # TODO: input Excel\n",
-    "     20 # Created_PS_refProcess = instance1.cal_from_list(Created_PS_refProcess=Created_PS_refProcess) # TODO: uncomment if you want to pass a list input list (in fact a dict)\n",
-    "     21 Created_PS_refProcess_file = open(\"Created_PS_refProcess.json\", \"w\")\n",
-    "\n",
-    "/var/folders/pk/3tmwrq6541738k97y1cxd07w0000gn/T/ipykernel_31799/1079511498.py in cal_from_excel(self, Created_PS_refProcess)\n",
-    "     79         # for i in range(2): # for test\n",
-    "     80             search_process_list = [Processes_df.iloc[p] for p in range(len(self.Processes_df)) if material_df['Activity'][i] in self.Processes_df.iloc[p]['name']] # search for processes with specific name\n",
-    "---> 81             result_df = self.create_calc_product_system(search_process_list, Created_PS_refProcess)\n",
-    "     82             result_df.to_csv(self.Result_path+'/Summary_'+material_df['Activity'][i]+'.csv', index=None)\n",
-    "     83 \n",
-    "\n",
-    "/var/folders/pk/3tmwrq6541738k97y1cxd07w0000gn/T/ipykernel_31799/1079511498.py in create_calc_product_system(self, search_process_list, Created_PS_refProcess)\n",
-    "     60             key = keys[j]\n",
-    "     61             result = calc_result[key]\n",
-    "---> 62             for k in range(len(result.impact_results)):\n",
-    "     63                 GWP_result = result.impact_results[k]\n",
-    "     64                 if 'GWP 100a' in GWP_result.impact_category.name:\n",
-    "\n",
-    "TypeError: object of type 'NoneType' has no len()"
    ]
   }
  ],
