--- a/OpenLCA/Ecoinvent_OpenLCA.ipynb
+++ b/OpenLCA/Ecoinvent_OpenLCA.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,8 +103,8 @@
     "        product_system_ids = []\n",
     "        product_system_names = []\n",
     "        product_system_locations = []\n",
-    "        for j in range(len(search_process_list)):\n",
-    "        # for j in range(2): # for test\n",
+    "        # for j in range(len(search_process_list)):\n",
+    "        for j in range(2): # for test\n",
     "            # Create product systems for selected processes\n",
     "            search_process_ID = search_process_list[j]['id']\n",
     "            search_process_name = search_process_list[j]['name']\n",
@@ -117,7 +117,7 @@
     "                product_system_locations.append(search_process_location)\n",
     "                Created_PS_refProcess[search_process_ID] = {'Process': [search_process_name, search_process_location, search_process_ID], 'Product_system': product_system.id}\n",
     "            else:\n",
-    "                print('Product system of '+'\"'+Created_PS_refProcess[search_process_ID]['Process'][0]+'\"'+' has been created before.')\n",
+    "                print('Product system of '+'\"'+Created_PS_refProcess[search_process_ID]['Process'][0]+' | '+Created_PS_refProcess[search_process_ID]['Process'][1]+'\"'+' has been created before.')\n",
     "                print('ID: '+Created_PS_refProcess[search_process_ID]['Product_system'])\n",
     "                product_system_ids.append(Created_PS_refProcess[search_process_ID]['Product_system'])\n",
     "                product_system_names.append(Created_PS_refProcess[search_process_ID]['Process'][0])\n",
@@ -134,8 +134,8 @@
     "        # can be also defined; by default openLCA will take the settings of the reference flow of the product system\n",
     "\n",
     "        calc_result = {}\n",
-    "        for j in range(len(product_system_df)):\n",
-    "        # for j in range(2): # for test\n",
+    "        # for j in range(len(product_system_df)):\n",
+    "        for j in range(2): # for test\n",
     "            key = product_system_names[j]+' | '+product_system_locations[j]+' | '+product_system_ids[j]\n",
     "            print('Calculating '+key)\n",
     "            setup.product_system = client.get(olca.ProductSystem, uid=product_system_ids[j])\n",
@@ -178,7 +178,10 @@
     "\n",
     "    def cal_from_list(self, Created_PS_refProcess={}):\n",
     "        for i in range(len(self.Process_list_target['include'])):\n",
-    "            search_process_list = [Processes_df.iloc[p] for p in range(len(self.Processes_df)) if self.Process_list_target['include'][i] in self.Processes_df.iloc[p]['name'] and not self.Process_list_target['not_include'][i] in self.Processes_df.iloc[p]['name']] # search for processes with specific name\n",
+    "            if self.Process_list_target['not_include'][i] == '':\n",
+    "                search_process_list = [Processes_df.iloc[p] for p in range(len(self.Processes_df)) if self.Process_list_target['include'][i] in self.Processes_df.iloc[p]['name']] # search for processes with specific name\n",
+    "            else:\n",
+    "                search_process_list = [Processes_df.iloc[p] for p in range(len(self.Processes_df)) if self.Process_list_target['include'][i] in self.Processes_df.iloc[p]['name'] and not self.Process_list_target['not_include'][i] in self.Processes_df.iloc[p]['name']] # search for processes with specific name\n",
     "            result_df = self.create_calc_product_system(search_process_list, Created_PS_refProcess)\n",
     "            result_df.to_csv(self.Result_path+'/Summary_'+self.Process_list_target['include'][i]+'.csv', index=None)\n",
     "        \n",
@@ -187,20 +190,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Product system of \"electricity, high voltage, production mix | electricity, high voltage | Cutoff, U\" has been created before.\n",
+      "ID: 16267725-400a-4f3a-ad66-c1ed242cdddd\n",
+      "Product system of \"electricity, high voltage, production mix | electricity, high voltage | Cutoff, U\" has been created before.\n",
+      "ID: 589a8955-9274-4dd1-97e3-a122e0a5c706\n",
+      "Calculating electricity, high voltage, production mix | electricity, high voltage | Cutoff, U | CA-SK | 16267725-400a-4f3a-ad66-c1ed242cdddd\n",
+      "Remaining number of processes to be calculated: 1\n",
+      "Calculating electricity, high voltage, production mix | electricity, high voltage | Cutoff, U | NL | 589a8955-9274-4dd1-97e3-a122e0a5c706\n"
+     ]
+    }
+   ],
    "source": [
     "Impact_method = 'IPCC 2013 no LT' # TODO: change impact method as you need\n",
     "Today = date.today().strftime(\"%d_%b_%Y\") # day, month, year\n",
     "Result_path = Today+'_calc_results_GWP100a_test' # TODO: change result path as you need\n",
     "\n",
-    "Excel_path = 'List_of_Materials_ecoinvent.xlsx' # optional, TODO: comment, uncomment and change Excel name (relative path, put the excel file under the same directory as this notebook)\n",
-    "\n",
-    "# Process_list_target = {\n",
-    "#     'include': ['market for electricity, medium voltage'], # key words you want to include\n",
-    "#     'not_include': ['municipal waste'] # key words you do not want to include\n",
-    "# } # optional, TODO: comment, uncomment and change keywords as you need\n",
+    "# Excel_path = 'List_of_Materials_ecoinvent.xlsx' # optional, TODO: comment, uncomment and change Excel name (relative path, put the excel file under the same directory as this notebook)\n",
+    "Process_list_target = {\n",
+    "    'include': ['electricity, high voltage, production mix'], # key words you want to include\n",
+    "    'not_include': [''] # key words you do not want to include\n",
+    "} # optional, TODO: comment, uncomment and change keywords as you need\n",
     "# if you want to search different activities, put your keywords accordingly in the second, third, ... position \n",
     "# in the list and remember to include an empty element '' when there's no 'not_include' keyword.\n",
     "\n",
@@ -209,15 +225,24 @@
     "# So this file should be varied from machine to machine. If there're no product systems created before in \n",
     "# your OpenLCA database, the json file should contain an empty dictionary.\n",
     "\n",
-    "instance1 = LCA_Calculation(Processes_df, Impact_method, Result_path, Excel_path=Excel_path, Process_list_target=Process_list_target)\n",
-    "Created_PS_refProcess = instance1.cal_from_excel(Created_PS_refProcess=Created_PS_refProcess) # TODO: input Excel\n",
-    "# Created_PS_refProcess = instance1.cal_from_list(Created_PS_refProcess=Created_PS_refProcess) # TODO: uncomment if you want to pass a list input list (in fact a dict)\n",
+    "instance1 = LCA_Calculation(Processes_df, Impact_method, Result_path, Excel_path=None, Process_list_target=Process_list_target) # TODO: change `None` to the real Excel path if input from Excel file\n",
+    "\n",
+    "# Created_PS_refProcess = instance1.cal_from_excel(Created_PS_refProcess=Created_PS_refProcess) # TODO: input Excel\n",
+    "Created_PS_refProcess = instance1.cal_from_list(Created_PS_refProcess=Created_PS_refProcess) # TODO: uncomment if you want to pass a list input list (in fact a dict)\n",
+    "\n",
     "Created_PS_refProcess_file = open(\"Created_PS_refProcess.json\", \"w\")\n",
     "Created_PS_refProcess_file = json.dump(Created_PS_refProcess, Created_PS_refProcess_file)\n",
     "\n",
     "# TODO: if you see `ERROR 500`, Failed to call method public org.openlca.ipc.RpcResponse org.openlca.ipc.handlers.Calculator.calculate(org.openlca.ipc.RpcRequest)`,\n",
     "# try to increase max. memory usage in OpenLCA then restart OpenLCA and Jupyter kernel."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
